.disabled/ssp/templates/portal-backend-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: usu-portal-backend
spec:
  host: usu-portal.apps.okd.baloise.dev
  path: /backend
  to:
    kind: Service
    name: ssp-usu-portal-backend-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
