.disabled/ssp/templates/portal-valuemation-portal-adapter-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: usu-portal-valuemation-portal-adapter
spec:
  host: usu-portal.apps.okd.baloise.dev
  path: /valuemation-portal-adapter
  to:
    kind: Service
    name: ssp-usu-portal-valuemation-portal-adapter-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
