.disabled/ssp/templates/portal-vma-portal-adapter-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: usu-portal-ssp-usu-portal-valuemation-analytics-portal-adapter-service
spec:
  host: usu-portal.apps.okd.baloise.dev
  path: /vma-portal-adapter
  to:
    kind: Service
    name: ssp-usu-portal-valuemation-analytics-portal-adapter-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
